name:                yesod-mpc
version:             0.2
synopsis:            Controlling a running mpd through a yesod subsite
homepage:            http://github.com/pbrisbin/yesod-mpc
license:             BSD3
license-file:        LICENSE
author:              Patrick Brisbin
maintainer:          me@pbrisbin.com
category:            Web, Yesod
build-type:          Simple
cabal-version:       >=1.2

library
  -- Modules exported by the library.
  exposed-modules: Yesod.Helpers.MPC
  
  -- Packages needed in order to build this package.
  build-depends: base, text, yesod, libmpd, containers, template-haskell, hamlet, blaze-html

  ghc-options: -Wall
  
source-repository head
  type:         git
  location:     git://github.com/pbrisbin/yesod-mpc.git
